--- a/src/scss/_util.scss
+++ b/src/scss/_util.scss
@@ -193,7 +193,9 @@
   @media (max-width: 1600px) {
     padding: 1.8rem 1.5625rem;
   }
-
+  @media (max-width: 576px) {
+    font-size: 1.2rem;
+  }
   &:focus {
     color: $gray-777;
     background-color: #FFFDFD;
@@ -357,8 +359,13 @@ label {
   color: #1f2022;
   font-weight: 500;
   font-family: Monserat, sans-serif;
-  @media (max-width: 576px) {
+  @media (max-height: 700px) {
     padding-left: 3rem;
+    font-size: 1.3rem;
+  }
+  @media (max-width: 576px) {
+    padding-left: 2rem;
+    font-size: 1.3rem;
   }
 }
 
@@ -372,6 +379,16 @@ label {
   border: 1px solid #BD90E4;
   border-radius: 50%;
   background: #FFF;
+  @media (max-height: 700px) {
+    top: 0;
+    width: 28px;
+    height: 28px;
+  }
+  @media (max-width: 576px) {
+    top: 0;
+    width: 25px;
+    height: 25px;
+  }
 }
 
 .l_radio__text:after {
@@ -386,6 +403,18 @@ label {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .5);
   opacity: 0;
   transition: .2s;
+  @media (max-height: 700px) {
+    top: 8px;
+    left: 8px;
+    width: 12px;
+    height: 12px;
+  }
+  @media (max-width: 576px) {
+    top: 7px;
+    left: 7px;
+    width: 11px;
+    height: 11px;
+  }
 }
 
 .l_radio input:checked + .l_radio__text:after {
