--- a/src/scss/about/about.scss
+++ b/src/scss/about/about.scss
@@ -31,9 +31,31 @@
       background-color: #F8FBFC;
       margin-bottom: 30px;
       .l_about-masthead_container {
+        display: flex;
+        align-items: center;
         position: relative;
-        height: 788px;
         margin-bottom: 30px;
+        height: calc(100vh - 212px - 4.075rem);
+        @media (max-width: 1680px) {
+          height: calc(100vh - 170px - 3.075rem);
+        }
+        @media (max-width: 1600px){
+          height: calc(100vh - 145px - 3.075rem );
+          margin: 1.7rem 0 1.3rem;
+        }
+        @media only screen
+        and (min-width: 991px)
+        and (max-height: 1366px)
+        and (-webkit-min-device-pixel-ratio: 1.5) {
+          height: calc(40vh);
+        }
+        @media (max-width: 991px) {
+          height: 450px;
+          margin: 1.37rem 0 1.3rem;
+        }
+        @media (max-width: 576px) {
+          height: 415px;
+        }
         @media (max-width: 576px) {
           height: initial;
         }
@@ -41,50 +63,84 @@
           bottom: 0;
           right: -112px;
           width: 758px;
-          height: 760px;
+          height: inherit;
           position: absolute;
-          background: url(../images/about_illustration.svg) no-repeat;
+          background: url(../images/about_illustration.svg) no-repeat center;
           background-size: contain;
+          @media (min-width: 2200px) {
+            right: -25vw;
+            width: 58vw;
+          }
+          @media only screen
+          and (min-width: 991px)
+          and (max-height: 1366px)
+          and (-webkit-min-device-pixel-ratio: 1.5) {
+            background-position: right;
+            right: -43px;
+            width: 832px;
+          }
           @media (max-width: 991px) {
-            bottom: 0;
-            right: 0;
+            width: 428px;
+            background-position: right;
+            right: -73px;
+          }
+          @media (max-width: 767px) {
+            right: 11%;
+          }
+          @media (max-width: 576px) {
             width: 100%;
-            height: 100%;
-          background: url(../images/about_illustration_left.svg) no-repeat -20px center, url(../images/about_illustration_right.svg) no-repeat calc(100% + 20px) center;
-            background-size: contain;
+            height: 317px;
+            bottom: -5%;
+            right: 0;
+            background-position: center;
           }
           @media (max-width: 576px) {
             background: none;
           }
         }
         .l_about-masthead_content {
-          padding-top: 90px;
           max-width: 500px;
           font-family: Rubik, sans-serif;
           @media (max-width: 1199px) {
-            max-width: 440px;
+          max-width: 440px;
           }
-          @media (max-width: 991px) {
-            margin: auto;
+          @media (max-width: 1600px) and (max-height: 730px) and (min-width: 1200px) {
+            padding-left: 12rem;
+          }
+          @media only screen
+          and (min-width: 991px)
+          and (max-height: 1366px)
+          and (-webkit-min-device-pixel-ratio: 1.5) {
+            padding-top: 2vh;
+          }
+          @media (max-width: 576px) {
+            width: 100%;
+            max-width: 100%;
             text-align: center;
-            padding-top: 0;
-            margin-bottom: .5rem !important;
           }
-
           .l_about-list {
             margin-left: 0;
             padding-left: 0;
             font-family: Montserrat, sans-serif;
             list-style-type: none;
-
+            @media (max-width: 576px) {
+              width: 230px;
+              margin: auto;
+            }
             .list_title {
               font-size: 2.25rem;
               font-weight: 500;
               letter-spacing: -1px;
+              @media (min-width: 2200px) {
+                font-size: 3.25rem;
+              }
+              @media (max-height: 750px), (max-width: 768px) {
+                font-size: 1.8rem;
+              }
               &.community {
                 margin-top: 2.5rem;
-                @media (max-width: 991px) {
-                  margin-top: 0;
+                @media (max-height: 750px), (max-width: 768px) {
+                  margin-top: 1.5rem;
                 }
               }
             }
@@ -92,13 +148,20 @@
             .list_place, .list_email, .list_icon {
               position: relative;
               font-size: 1.5rem;
-              padding-left: 64px;
+              padding-left: 4rem;
               margin: 1.7rem 0 1.85rem;
               word-spacing: 4px;
               letter-spacing: -1px;
-              @media (max-width: 991px) {
-                padding-left: 0;
-                margin: 2.7rem 0 1.85rem;
+              @media (min-width: 2200px) {
+                font-size: 2.2rem;
+              }
+              @media (max-height: 750px), (max-width: 768px) {
+                font-size: 1.2rem;
+                margin: 1.2rem 0 1.2rem;
+                padding-left:  3.125rem;
+              }
+              @media (max-width: 576px) {
+                text-align: left;
               }
             }
 
@@ -116,9 +179,13 @@
                 background: url(../images/sprite_list.png) no-repeat;
                 width: 44px;
                 height: 44px;
-                @media (max-width: 991px) {
-                  left: calc(50% - 22px);
-                  top: -42px;
+                @media (min-width: 2200px) {
+                  top: 0;
+                }
+                @media (max-height: 750px), (max-width: 768px) {
+                  width: 33px;
+                  height: 33px;
+                  background-size: cover;
                 }
               }
             }
@@ -137,10 +204,15 @@
                 background: url(../images/sprite_list.png) no-repeat -43px;
                 width: 44px;
                 height: 44px;
-
-                @media (max-width: 991px) {
-                  left: calc(50% - 22px);
-                  top: -42px;
+                @media (min-width: 2200px) {
+                  top: -9px;
+                }
+                @media (max-height: 750px), (max-width: 768px) {
+                  width: 33px;
+                  height: 33px;
+                  background-size: cover;
+                  background-position: -34px !important;
+                  top: -12px;
                 }
               }
             }
@@ -149,8 +221,8 @@
               padding: 0;
               margin: 2rem 1.25rem 1.85rem 0;
               display: inline-block;
-              @media (max-width: 991px) {
-                margin: .5rem 1.25rem 1.85rem 0;
+              @media (max-height: 750px) {
+                margin: 1rem 1rem 1rem 0;
               }
               .l_icon {
                 display: inline-block;
@@ -168,6 +240,14 @@
 
                 &.telegram {
                   background: url(../images/sprite_list_icon.png) no-repeat -56px;
+                  @media (max-height: 750px), (max-width: 768px) {
+                    background-position: -45px !important;
+                  }
+                }
+                @media (max-height: 750px), (max-width: 768px) {
+                  width: 44px;
+                  height: 44px;
+                  background-size: cover !important;
                 }
               }
             }
