--- a/src/scss/add_account/add_account.scss
+++ b/src/scss/add_account/add_account.scss
@@ -53,20 +53,14 @@
     }
   }
 
-  .l_add-account-title {
-    font-size: 3rem;
-    font-weight: 500;
+  .l_site-title {
     margin-bottom: 1.5625rem;
-    font-family: Rubik, sans-serif;
-    @media (max-width: 1600px) {
-      font-size: 2.8rem;
-    }
+    margin-top: 3rem;
+    @media (max-width: 1600px), (max-height: 700px) {
+      margin: 1.5rem 0 1rem;
+  }
     @media (max-width: 800px) {
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-    }
-    @media (max-width: 576px) {
-      font-size: 2.2rem;
+      margin: 1rem 0;
     }
   }
 
