--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -208,6 +208,7 @@ button:focus {
 }
 
 @import "our_tariff/our_tariff";
+@import "new_tariff/new_tariff";
 @import "about/about";
 @import "features/features";
 .l_site-main {
@@ -216,7 +217,6 @@ button:focus {
   @import "add_description/add_description";
   @import "add_account/add_account";
   @import "edit_account/edit_account";
-  @import "new_tariff/new_tariff";
   @import "spa-sections/tariff";
   @import "report/report";
   @import "treatment/treatment";
@@ -235,7 +235,7 @@ button:focus {
     color: #1F2022;
     text-align: center;
     margin-bottom: 0.8rem;
-    @media (max-width: 1600px) {
+    @media (max-width: 1600px), (max-height: 700px)  {
       font-size: 2.5rem;
     }
     @media (max-width: 576px) {
@@ -299,7 +299,7 @@ button:focus {
         font-weight: 400;
         text-align: center;
         margin-bottom: 3.125rem;
-        @media (max-width: 1536px) {
+        @media (max-width: 1600px) {
           font-size: 1.3rem;
           margin-bottom: 2rem;
         }
@@ -312,7 +312,7 @@ button:focus {
         padding: 1.2rem 9rem;
         font-size: 1.3rem;
         border-radius: 0.65rem;
-        @media (max-width: 1536px) {
+        @media (max-width: 1600px) {
           padding: 0.71rem 7rem;
           font-size: 1rem;
         }
@@ -328,20 +328,62 @@ button:focus {
 
 
   .registration & {
-    background-image: url(../images/element.png);
-    background-repeat: no-repeat;
-    background-position: 62vw calc(100% + 115px);
+    display: flex;
+    align-items: center;
+    padding: 1rem 0;
+    background: url(../images/element.png) no-repeat 62vw calc(100% + 200px);
     height: 100%;
     background-size: contain;
-    @media (max-width: 1300px) {
-      background-position: 70vw calc(100% + 115px);
+    @media (max-width: 1600px) {
+      background-position: 62vw calc(100% + 70px);
+      background-size: 17%;
     }
     @media (max-width: 576px) {
       height: initial;
       background-position: 45vw calc(100% + 115px);
     }
-    @media (min-width: 2000px) {
-      padding-top: 20vh;
+    @media (max-width: 991px) {
+      margin-top: 0;
+    }
+    .l_site-title{
+
+      @media (max-width: 1600px) {
+        font-size: 2.3rem;
+        margin-bottom: 1rem;
+      }
+      @media (max-width: 1024px) {
+        font-size: 2rem;
+      }
+    }
+  }
+
+  .l_login & {
+    display: flex;
+    align-items: center;
+    background: url(../images/element.png) no-repeat 62vw calc(100% + 200px);
+    height: 100%;
+    background-size: contain;
+    @media (max-width: 1600px) {
+      background-position: 62vw calc(100% + 70px);
+      background-size: 17%;
+    }
+    @media (max-width: 576px) {
+      height: initial;
+      background-position: 45vw calc(100% + 200px);
+    }
+    @media (max-width: 991px) {
+      margin-top: 0;
+    }
+    .l_site-title{
+      margin-bottom: 1.5rem;
+      margin-top: 0;
+      @media (max-width: 1600px) {
+        font-size: 2.3rem;
+        margin-bottom: 1rem;
+      }
+      @media (max-width: 1024px) {
+        font-size: 2rem;
+      }
     }
   }
 
@@ -360,21 +402,19 @@ button:focus {
   }
 
   .add_description & {
+    display: flex;
+    align-items: center;
+    height: calc(100% - 100px);
     background-image: url(../images/element.png);
     background-repeat: no-repeat;
     background-position: 68vw calc(100% + 75px);
-    height: 100%;
     background-size: contain;
     @media (max-width: 1300px) {
       background-position: 70vw calc(100% + 130px);
-      height: initial;
+      height: calc(100% - 56px);
     }
     @media (max-width: 576px) {
-      height: initial;
       background-position: 45vw calc(100% + 130px);
-    }
-    @media (min-width: 2000px) {
-      padding-top: 15vh;
     }
   }
 
@@ -784,6 +824,7 @@ button:focus {
     }
   }
 
+
   .l_registration {
     .l_reg-container {
       width: 630px;
@@ -791,11 +832,45 @@ button:focus {
       background-color: #F9F9F9;
       border-radius: 10px;
       @media (max-width: 1600px) {
-        padding: 1.5625rem 1.5625rem;
+        padding: 1.2rem;
+        width: 480px;
+      }
+      @media (max-width: 1024px), (max-height: 700px)  {
+        width: 400px;
+      }
+      .form-group{
+        margin-bottom: 1.5rem;
+        @media (max-width: 1522px) {
+          margin-bottom: 1rem;
+        }
+        .custom-field {
+          @media (max-width: 1600px)  {
+            padding: 1.58rem 1.5rem;
+            font-size: 1.2rem;
+          }
+          @media (max-width: 576px) {
+            font-size: 1.3rem;
+          }
+        }
       }
 
-      .btn-inline-custom4 {
+      .btn {
         font-weight: 400;
+        width: 100%;
+        padding: 0.7rem;
+        font-size: 1.3rem;
+        margin-bottom: 1rem;
+        border-radius: 0.65rem;
+        @media (max-width: 1560px)  {
+          padding: 0.5rem;
+          font-size: 1rem;
+        }
+        @media (max-width: 1024px)  {
+          padding: 0.4rem;
+        }
+        @media (max-width: 576px) {
+          font-size: 1rem;
+        }
       }
 
       .l_reg-user-accept {
@@ -853,11 +928,23 @@ button:focus {
   .l_404 & {
     display: flex;
     align-items: center;
-    min-height: calc(100% - 95px);
+    min-height: calc(100% - 155px);
     background: url(../images/404_illustration.svg) no-repeat 66% 35px;
     background-size: contain;
+    @media (max-width: 1680px) {
+      min-height: calc(100% - 113px);
+    }
+    @media (max-width: 1600px){
+      min-height: calc(100% - 97px);
+    }
+    @media (max-width: 1400px) {
+      min-height: calc(100% - 88px);
+    }
     @media (max-width: 1199px) {
-      background-position: 85% 35px;
+      background-position: 90% 35px;
+    }
+    @media (max-width: 991px) {
+      min-height: calc(100% - 57px);
     }
     @media (max-width: 800px) {
       background: none;
@@ -865,6 +952,9 @@ button:focus {
 
     .l_404-container {
       max-width: 600px;
+      @media (max-width: 991px) {
+        max-width: 450px;
+      }
       @media (max-width: 800px) {
         text-align: center;
         max-width: 100%;
@@ -875,6 +965,9 @@ button:focus {
         font-family: Rubik, sans-serif;
         text-transform: uppercase;
         padding: 1.875rem 0;
+        @media (max-width: 991px) {
+          font-size: 1.85rem;
+        }
         @media (max-width: 576px) {
           font-size: 1.5rem;
         }
@@ -909,7 +1002,11 @@ button:focus {
         font-size: 2.25rem;
         font-family: Rubik, sans-serif;
         max-width: 520px;
+        @media (max-width: 1600px) {
+          font-size: 2rem;
+        }
         @media (max-width: 1024px) {
+          font-size: 1.8rem;
           padding-top: 3.75rem;
         }
         @media (max-width: 768px) {
@@ -927,6 +1024,12 @@ button:focus {
         text-transform: uppercase;
         padding: .3rem 0 2rem;
         font-weight: 700;
+        @media (max-width: 1600px) {
+          font-size: 2rem;
+        }
+        @media (max-width: 1024px) {
+          font-size: 1.8rem;
+        }
         @media (max-width: 576px) {
           font-size: 1.5rem;
         }
@@ -950,11 +1053,24 @@ button:focus {
     height: 100%;
     top: 0;
     left: 53vw;
-    @media (max-width: 1300px) {
-      left: 51vw;
+    background-size: cover;
+    @media (max-width: 1600px) {
+      left: 60vw;
+      background-size: contain;
+    }
+    @media (max-width: 1024px) {
+      background-size: contain;
+      left: 57vw;
+    }
+    @media only screen
+    and (min-width: 991px)
+    and (max-height: 1366px)
+    and (-webkit-min-device-pixel-ratio: 1.5) {
+      left: 38vw;
+      background-size: cover;
     }
     @media (max-width: 800px) {
-      left: 65vw;
+      left: 58vw;
       background-size: contain;
     }
     @media (max-width: 768px) {
@@ -964,7 +1080,6 @@ button:focus {
       background: none;
     }
     @media (min-width: 1930px) {
-      background-size: contain;
     }
   }
 }
@@ -1072,18 +1187,12 @@ button:focus {
   line-height: 2rem;
   background-color: rgb(255, 253, 253);
   box-shadow: 0 0 5.95px 1.05px rgba(69, 65, 78, 0.08);
-
+/*
   .registration &::before {
     background-image: url(../images/element.png);
     background-repeat: no-repeat;
     background-position: right;
-  }
-
-  @media (min-width: 1200px) {
-    // position: absolute;
-    // bottom: 0;
-    // width: 100%;
-  }
+  }*/
 
   a {
     color: $main_black;
@@ -1140,7 +1249,7 @@ button:focus {
     .gl-list {
       display: inline-flex;
       box-shadow: 0 2px 10.92px 2.08px rgba(98, 68, 201, 0.15);
-
+      max-width: 131px;
       li {
         .lang-ru {
           color: $lang_c2 !important;
@@ -1250,6 +1359,9 @@ button:focus {
         margin-bottom: .5rem;
         font-size: 1.8rem;
         letter-spacing: 0.1rem;
+        @media (max-height: 800px) {
+          font-size: 1.6rem;
+        }
       }
 
       .modal-sub_title {
@@ -1260,6 +1372,9 @@ button:focus {
         font-size: 1.125rem;
         color: #D0CECE;
         text-transform: initial;
+        @media (max-height: 800px) {
+          font-size: 1rem;
+        }
       }
 
       h5 {
@@ -1278,9 +1393,18 @@ button:focus {
         }
 
         span {
-          font-size: 68px;
+          font-size: 4.25rem;
           font-weight: 300;
           font-family: serif;
+          @media (max-height: 800px) {
+            font-size: 3.5rem;
+          }
+          @media (max-height: 700px) {
+            font-size: 3rem;
+          }
+          @media (max-width: 576px) {
+            font-size: 2.625rem;
+          }
         }
       }
     }
@@ -1294,6 +1418,7 @@ button:focus {
       @media (max-width: 1522px) {
         padding: .5rem 1.5rem;
       }
+
       @media (max-width: 576px) {
         padding: .5rem;
       }
@@ -1301,6 +1426,12 @@ button:focus {
         margin: 1.5rem;
         @media (max-width: 1522px) {
           margin: 1rem;
+        }
+        @media (max-height: 800px) {
+          margin: .7rem;
+        }
+        @media (max-height: 700px) {
+          margin: .5rem;
         }
       }
       .price {
@@ -1310,10 +1441,19 @@ button:focus {
         color: #1f2022;
         font-weight: 700;
         font-size: 1.5rem;
+        @media  (max-height: 700px) {
+          font-size: 1.3rem;
+        }
 
         .price-period {
           font-size: 0.875rem;
           color: #adadad;
+          @media (max-height: 800px) {
+            font-size: 0.63rem;
+          }
+          @media (max-height: 700px) {
+            font-size: 0.5rem;
+          }
         }
 
         .price-sale {
@@ -1321,6 +1461,7 @@ button:focus {
           color: #00B605;
           @media (max-width: 576px) {
             display: block;
+            font-size: 0.5rem;
           }
         }
       }
@@ -1329,11 +1470,22 @@ button:focus {
         font-size: 1.6875rem;
         float: right;
         color: #1f2022;
-
+        @media (max-height: 800px) {
+          font-size: 1.5rem;
+        }
+        @media (max-height: 700px) {
+          font-size: 1.3rem;
+        }
         &-count {
           color: #b08fe0;
           font-size: 1.9375rem;
           font-weight: 500;
+          @media (max-height: 800px) {
+            font-size: 1.7rem;
+          }
+          @media (max-height: 700px) {
+            font-size: 1.5rem;
+          }
         }
       }
 
@@ -1342,9 +1494,17 @@ button:focus {
         background-color: #F9FBFC;
         border-radius: 0;
         padding-left: 4.6875rem;
+        @media (max-height: 800px) {
+          font-size: 1.3rem;
+          padding: 1.5rem 1.5625rem 1.5rem 4rem;
+          background-position: 18px 11px;
+        }
+        @media (max-height: 700px) {
+          padding: 0 1.5625rem 0 3.5rem;
+          background-position: 15px 9px;
+        }
         @media (max-width: 576px) {
           padding-left: 3.5rem;
-          font-size: 1.3rem;
         }
 
         &:focus {
@@ -1359,15 +1519,21 @@ button:focus {
       .btn-inline-custom {
         font-family: Montserrat, sans-serif;
         font-weight: 500;
-        font-size: 1.5rem !important;
+        font-size: 1.5rem;
         word-spacing: .25rem;
         padding: 0.7rem;
         width: 100%;
         @media (min-width: 1600px) {
           padding: 1rem ;
         }
-        @media (min-width: 768px) {
+        @media (max-height: 800px) {
           margin-bottom: 0.5rem;
+          padding: 0.6rem;
+        }
+        @media (max-height: 700px) {
+          font-size: 1.3rem;
+          margin-bottom: 0.5rem;
+          padding: 0.35rem;
         }
       }
 
@@ -1379,6 +1545,9 @@ button:focus {
         font-size: 1rem;
         display: block;
         text-decoration: underline;
+        @media (max-width: 768px) {
+          margin-bottom: 0.5rem;
+        }
       }
     }
   }
