--- a/src/scss/features/features.scss
+++ b/src/scss/features/features.scss
@@ -25,18 +25,18 @@
       width: 1970px;
       height: 100%;
       position: absolute;
-      background: url(../images/features_nav_bg.svg) no-repeat right top;
+      background: url(../images/features_nav_bg.svg) no-repeat right bottom;
       top: 0;
       left: calc(50% - 350px);
       background-size: 100%;
       @media (max-width: 1199px) {
-        left: calc(56% - 350px);
+        left: calc(59% - 350px);
       }
     }
     .l_header--navbar {
-      padding-bottom: 3.5rem !important;
+     // padding-bottom: 3.5rem !important;
       @media (max-width: 991px) {
-        padding-bottom: 0.5rem !important;
+       // padding-bottom: 0.5rem !important;
       }
       .l_header--menu .nav-item .nav-link {
         color: white;
@@ -62,6 +62,7 @@
       font-family: Montserrat, sans-serif;
       position: relative;
       display: inline-block;
+      letter-spacing: .06rem;
       &::after {
         content: "";
         position: absolute;
@@ -74,11 +75,14 @@
           content: none;
         }
       }
-      @media (max-width: 1300px) {
-        font-size: 2rem;
+      @media (max-width: 1600px) {
+        font-size: 1.8rem;
       }
       @media (max-width: 991px) {
         margin: 1rem 0 0;
+      }
+      @media (max-width: 576px) {
+        font-size: 1.5rem;
       }
     }
 
@@ -88,11 +92,16 @@
       text-transform: uppercase;
       margin-bottom: 2.7rem;
       font-family: Montserrat, sans-serif;
-      @media (max-width: 1300px) {
-        font-size: 2rem;
+      letter-spacing: .06rem;
+      @media (max-width: 1600px) {
+        font-size: 1.8rem;
+        margin-bottom: 1.5rem;
       }
       @media (max-width: 991px) {
         margin: 1rem 0;
+      }
+      @media (max-width: 576px) {
+        font-size: 1.5rem;
       }
     }
 
@@ -109,6 +118,12 @@
         @media (max-width: 576px) {
           width: 100%;
         }
+        .form-group{
+          margin-bottom: 3rem;
+          @media (max-width: 1600px) {
+            margin-bottom: 2rem;
+          }
+        }
         .custom-check-title {
           padding: 1rem 1.5625rem;
           background-color: #FFFDFD;
@@ -118,6 +133,9 @@
           font-family: Rubik, sans-serif;
           text-align: left;
           border-radius: 5px 5px 0 0;
+          @media (max-width: 576px) {
+            font-size: 1.2rem;
+          }
         }
 
         .custom-check_container {
@@ -130,6 +148,9 @@
           font-family: Rubik, sans-serif;
           text-align: left;
           border-top: none;
+          @media (max-width: 576px) {
+            font-size: 1.2rem;
+          }
         }
       }
     }
