--- a/src/scss/our_tariff/our_tariff.scss
+++ b/src/scss/our_tariff/our_tariff.scss
@@ -6,27 +6,43 @@
   }
   .l_site-main {
     .l_our_tariff-masthead {
-      padding-top: 50px;
+      padding-top: 3.125rem;
       background-color: #F8FBFC;
-
+      @media (max-width: 1600px) {
+        padding-top: 1.875rem;
+      }
+      @media (max-width: 1199px), (max-height: 700px) {
+        padding-top: 1.4rem;
+      }
       .l_our_tariff-masthead_content {
         font-family: Rubik, sans-serif;
         background: url(../images/element.png) no-repeat 95% 20%;
-        padding-top: 80px;
-        padding-bottom: 60px;
+        padding-top: 5rem;
+        padding-bottom: 3.75rem;
+        @media (max-width: 1600px) {
+          padding-top: 2.75rem;
+          padding-bottom: 2.5rem;
+        }
+        @media (max-width: 1199px), (max-height: 700px) {
+          padding-top: 3rem;
+          padding-bottom: 2rem;
+        }
         @media (max-width: 991px) {
           margin: auto;
           text-align: center;
           padding-top: 0;
-          margin-bottom: .5rem !important;
+          margin-bottom: 0;
         }
 
         h1 {
           font-weight: 400;
           font-size: 3.625rem;
           line-height: 1.1;
-          @media (max-width: 1199px) {
-            font-size: 2.625rem;
+          @media (max-width: 1600px) {
+            font-size: 3rem;
+          }
+          @media (max-width: 1199px), (max-height: 700px) {
+            font-size: 2.4rem;
           }
           @media (max-width: 576px) {
             font-size: 1.8rem;
@@ -38,8 +54,15 @@
           font-size: 1.12rem;
           max-width: 770px;
           text-align: justify;
-          @media (max-width: 576px) {
+          margin-bottom: 3rem;
+          @media (max-width: 1600px) {
             font-size: 1rem;
+            margin-bottom: 1.5rem;
+          }
+          @media (max-width: 1199px), (max-height: 700px) {
+            margin-bottom: 0;
+          }
+          @media (max-width: 576px) {
             padding: 0 1rem;
           }
         }
@@ -50,14 +73,24 @@
     .l_our_tariff-price {
       margin-top: 2.875rem;
       margin-bottom: 1.25rem;
+      @media (max-width: 1199px), (max-height: 700px) {
+        margin-top: 2rem;
+      }
+      @media (max-width: 576px) {
+        margin-top: 1.25rem;
+      }
       .l_our_tariff-title {
         font-size: 2.25rem;
         text-transform: uppercase;
         font-weight: 700;
         margin-bottom: 1.5625rem;
         font-family: Montserrat, sans-serif;
-        @media (max-width: 576px) {
+        @media (max-width: 1199px), (max-height: 700px) {
           font-size: 2rem;
+        }
+        @media (max-width: 576px) {
+          font-size: 1.8rem;
+          margin-bottom: 0;
         }
       }
 
