--- a/src/scss/about/about.scss
+++ b/src/scss/about/about.scss
@@ -85,7 +85,7 @@
             right: -73px;
           }
           @media (max-width: 767px) {
-            right: 11%;
+            right: -33%;
           }
           @media (max-width: 576px) {
             width: 100%;
@@ -139,6 +139,13 @@
               }
               &.community {
                 margin-top: 2.5rem;
+                @media only screen
+                and (min-width: 1024px)
+                and (max-height: 1366px)
+                and (orientation: landscape)
+                and (-webkit-min-device-pixel-ratio: 1.5) {
+                  margin-top: 1.5rem;
+                }
                 @media (max-height: 750px), (max-width: 768px) {
                   margin-top: 1.5rem;
                 }
@@ -154,6 +161,13 @@
               letter-spacing: -1px;
               @media (min-width: 2200px) {
                 font-size: 2.2rem;
+              }
+              @media only screen
+              and (min-width: 1024px)
+              and (max-height: 1366px)
+              and (orientation: landscape)
+              and (-webkit-min-device-pixel-ratio: 1.5) {
+                margin: 1.2rem 0 1.2rem;
               }
               @media (max-height: 750px), (max-width: 768px) {
                 font-size: 1.2rem;
@@ -221,6 +235,13 @@
               padding: 0;
               margin: 2rem 1.25rem 1.85rem 0;
               display: inline-block;
+              @media only screen
+              and (min-width: 1024px)
+              and (max-height: 1366px)
+              and (orientation: landscape)
+              and (-webkit-min-device-pixel-ratio: 1.5) {
+              margin: 1rem 1rem 1rem 0;
+              }
               @media (max-height: 750px) {
                 margin: 1rem 1rem 1rem 0;
               }
@@ -299,11 +320,18 @@
       background: #EDEFFF url(../images/element.png) no-repeat 75vw calc(100% + 120px);
       background-size: contain;
       padding: 2.8125rem 0 2.5rem;
+      @media (max-width: 1600px) {
+        padding: 1.8rem 0 1.8rem;
+      }
       .l_about-questions_title{
         font-size: 3rem;
         font-weight: 500;
         margin-bottom: 3.125rem;
         font-family: Rubik, sans-serif;
+        @media (max-width: 1600px) {
+          font-size: 2.5rem;
+          margin-bottom: 1.525rem;
+        }
         @media (max-width: 991px) {
           font-size: 2.2rem;
         }
@@ -328,6 +356,19 @@
         @media (max-width: 1199px) {
           width: 600px;
           margin: 0 auto;
+        }
+        .form-group{
+          margin-bottom: 2.5rem;
+          @media (max-width: 1600px) {
+            margin-bottom: 1.5rem;
+          }
+        }
+        .btn-inline-custom4{
+          padding: 1rem 5.7rem;
+          @media (max-width: 1600px) {
+            font-size: 1.25rem;
+            padding: .61rem 5.7rem;
+          }
         }
       }
     }
