--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -104,7 +104,7 @@
     color: $white;
     border-color: $a_focus3;
     background-color: $a_focus3;
-    border-radius: 34px;
+   // border-radius: 34px;
   }
 
   & svg {
