--- a/src/scss/edit_account/edit_account.scss
+++ b/src/scss/edit_account/edit_account.scss
@@ -13,16 +13,22 @@
       color: #999999;
       line-height: 2.642;
       font-weight: 500;
+      padding-left: 0;
+      padding-right: 2rem;
+      @media (max-width: 768px) {
+        margin: auto;
+      }
       @media (max-width: 576px) {
         line-height: inherit;
         text-align: center;
+        font-size: 1.3rem;
       }
       &.active {
         color: #2c2d2e;
         &::after {
           content: "";
           position: absolute;
-          left: 1rem;
+          left: 0;
           bottom: 0;
           height: 6px;
           width: 75%;
