--- a/src/scss/edit_account/edit_account.scss
+++ b/src/scss/edit_account/edit_account.scss
@@ -22,6 +22,7 @@
         line-height: inherit;
         text-align: center;
         font-size: 1.3rem;
+        padding: 0.5rem 1rem;
       }
       &.active {
         color: #2c2d2e;
