--- a/css/app.css
+++ b/css/app.css
@@ -10297,6 +10297,20 @@ input[type=checkbox].switch:checked:after {
   box-shadow: none;
 }
 
+.invalid-feedback {
+  font-size: 100%;
+}
+@media (max-width: 1600px) {
+  .invalid-feedback {
+    font-size: 86%;
+  }
+}
+@media (max-width: 1300px) {
+  .invalid-feedback {
+    font-size: 80%;
+  }
+}
+
 .custom-control {
   border: 1px solid #f3edfb;
   border-radius: 10px;
@@ -10622,6 +10636,11 @@ label {
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 0.25rem;
+}
+@media (max-width: 991px) {
+  .l-navbar--toggler {
+    padding: 0.25rem 0.35rem;
+  }
 }
 
 .navbar-toggler {
@@ -11145,6 +11164,11 @@ button:focus {
   border: 1px solid transparent;
   border-radius: 0.25rem;
 }
+@media (max-width: 991px) {
+  .l-navbar--toggler {
+    padding: 0.25rem 0.35rem;
+  }
+}
 
 .navbar-toggler {
   z-index: 30;
@@ -11417,6 +11441,11 @@ button:focus {
 }
 .l_site-header .l_header--navbar .l_header--menu .nav-item .nav-link {
   color: #1f2022;
+}
+@media (max-width: 991px) {
+  .l_site-header .l_header--navbar .l_header--menu .nav-item .nav-link {
+    color: #fff;
+  }
 }
 .l_site-header .l_header--navbar .l_header--menu .nav-item .l_auth__button {
   color: #fff;
@@ -12172,9 +12201,10 @@ button:focus {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 5px;
+  bottom: 7px;
   height: 6px;
   width: 26%;
+  z-index: -1;
   border-bottom: 6px solid #FF398B;
 }
 @media (max-width: 991px) {
@@ -12730,6 +12760,7 @@ button:focus {
     line-height: inherit;
     text-align: center;
     font-size: 1.3rem;
+    padding: 0.5rem 1rem;
   }
 }
 .edit_account .l_site-main .l_site-content-title .nav-link.active {
@@ -13752,7 +13783,7 @@ button:focus {
   height: calc(100% - 100px);
 }
 .first_screen .l_site-main .first_screen-container {
-  padding: 4rem 0;
+  padding: 3rem 0;
 }
 .first_screen .l_site-main .first_screen-container .first_screen_sub-title {
   font-size: 1.875rem;
@@ -13911,6 +13942,65 @@ button:focus {
 }
 @media (max-width: 1024px) {
   .l_login .l_site-main .l_site-title {
+    font-size: 2rem;
+  }
+}
+.first_screen .l_site-main {
+  display: flex;
+  align-items: center;
+  background: url(../images/element.png) no-repeat 62vw calc(100% + 200px);
+  height: calc(100% - 100px);
+  background-size: contain;
+  /* Portrait */
+}
+@media (max-width: 1600px) {
+  .first_screen .l_site-main {
+    background-size: 16%;
+  }
+}
+@media (max-width: 1300px) {
+  .first_screen .l_site-main {
+    background-size: 19%;
+  }
+}
+@media (max-width: 1199px) {
+  .first_screen .l_site-main {
+    height: calc(100% - 56px);
+  }
+}
+@media (max-width: 991px) {
+  .first_screen .l_site-main {
+    margin-top: 0;
+    height: 100%;
+  }
+}
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .first_screen .l_site-main {
+    background-size: 33%;
+  }
+}
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  .first_screen .l_site-main {
+    background-size: 28%;
+  }
+}
+@media (max-width: 576px) {
+  .first_screen .l_site-main {
+    height: initial;
+    background-position: 45vw calc(100% + 200px);
+  }
+}
+.first_screen .l_site-main .l_site-title {
+  margin-bottom: 1.5rem;
+}
+@media (max-width: 1600px) {
+  .first_screen .l_site-main .l_site-title {
+    font-size: 2.3rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 1024px) {
+  .first_screen .l_site-main .l_site-title {
     font-size: 2rem;
   }
 }
