--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -17,6 +17,9 @@
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 0.25rem;
+  @media (max-width: 991px) {
+    padding: 0.25rem 0.35rem;
+  }
 }
 
 .navbar-toggler {
