--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -142,7 +142,6 @@ button:focus {
   }
 }
 
-
 .navbar-toggler {
   border: 1px solid #fff;
 }
@@ -156,6 +155,9 @@ button:focus {
 
   .l_header--navbar .l_header--menu .nav-item .nav-link {
     color: #1f2022;
+    @media (max-width: 991px) {
+      color: #fff;
+    }
   }
 
   .l_header--navbar .l_header--menu .nav-item .l_auth__button {
@@ -249,7 +251,7 @@ button:focus {
     height: calc(100% - 100px);
 
     .first_screen-container {
-      padding: 4rem 0;
+      padding: 3rem 0;
       .first_screen_sub-title {
         font-size: 1.875rem;
         font-family: Rubik, sans-serif;
@@ -386,7 +388,54 @@ button:focus {
       }
     }
   }
-
+  .first_screen & {
+    display: flex;
+    align-items: center;
+    background: url(../images/element.png) no-repeat 62vw calc(100% + 200px);
+    height: calc(100% - 100px);
+    background-size: contain;
+    @media (max-width: 1600px) {
+      background-size: 16%;
+    }
+    @media (max-width: 1300px) {
+      background-size: 19%;
+    }
+    @media (max-width: 1199px) {
+      height: calc(100% - 56px);
+    }
+    @media (max-width: 991px) {
+      margin-top: 0;
+      height: 100%;
+    }
+    /* Portrait */
+    @media only screen
+    and (min-width: 1024px)
+    and (max-height: 1366px)
+    and (orientation: portrait)
+    and (-webkit-min-device-pixel-ratio: 1.5) {
+      background-size: 33%;
+    }
+    @media only screen
+    and (min-device-width : 768px)
+    and (max-device-width : 1024px)
+    and (orientation : portrait) {
+      background-size: 28%;
+    }
+    @media (max-width: 576px) {
+      height: initial;
+      background-position: 45vw calc(100% + 200px);
+    }
+    .l_site-title{
+      margin-bottom: 1.5rem;
+      @media (max-width: 1600px) {
+        font-size: 2.3rem;
+        margin-bottom: 1rem;
+      }
+      @media (max-width: 1024px) {
+        font-size: 2rem;
+      }
+    }
+  }
   .l_features & {
     background-image: url(../images/element.png);
     background-repeat: no-repeat;
