--- a/src/scss/features/features.scss
+++ b/src/scss/features/features.scss
@@ -67,9 +67,10 @@
         content: "";
         position: absolute;
         left: 0;
-        bottom: 5px;
+        bottom: 7px;
         height: 6px;
         width: 26%;
+        z-index: -1;
         border-bottom: 6px solid #FF398B;
         @media (max-width: 991px) {
           content: none;
